# lead-Scrapper-For-TP

./: README.md  setup_and_run.bat
backend/: .gitignore  pyproject.toml
backend/app/: main.py  scraper.py
backend/scripts/: test_toggle.py  verify_extraction.py
frontend/: .gitignore  vite.config.js
frontend/src/: App.css  App.jsx
